# pybench

./: .codespell-whitelist  .pre-commit-config.yaml  README.md  bench.yaml  cli.py  pyproject.toml  requirements_dev.txt  requirements_doc.txt  setup.cfg
.github/scripts/: install_libiio.sh
.github/workflows/: doc.yml  lint.yml  pyinstallers.yml
bench/: __init__.py  common.py  plugin.py
bench/all/: __init__.py
bench/cli/: iiotools.py  main.py  visatools.py
bench/hittite/: __init__.py  hmct2220.py
bench/keysight/: __init__.py  e36233a.py  n9040b.py
bench/keysight/dwta/: __init__.py  data_capture.py  utils.py
bench/rs/: __init__.py  sma100a.py
bench/web/: app.py  iq_data.csv  test_data_send.py
bench/web/templates/: help.html
doc/: requirements.txt
doc/source/: cli.md  conf.py  example_usage.md  index.rst  install.md
doc/source/frameworks/: pytest.md
doc/source/instruments/: index.md
examples/: hmct2220_example.py  plot_dmx_data.py
main/: .buildinfo  cli.html  config_file.html  example_usage.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/_sources/: cli.md.txt  config_file.md.txt  example_usage.md.txt  index.rst.txt  install.md.txt
main/_sources/frameworks/: pytest.md.txt
main/_sources/instruments/: bench.rs.sma100a.rst.txt  index.md.txt
main/frameworks/: pytest.html
main/instruments/: bench.common.html  bench.hittite.hmct2220.html  bench.keysight.e36233a.html  bench.keysight.n9040b.html  bench.rs.sma100a.html  index.html
prs/tfcollins/add-cli/: cli.html  example_usage.html  genindex.html  index.html  objects.inv  searchindex.js
prs/tfcollins/add-cli/_sources/: cli.md.txt
prs/tfcollins/add-cli/_sources/instruments/: bench.hittite.hmct2220.rst.txt  bench.keysight.e36233a.rst.txt  bench.keysight.n9040b.rst.txt
prs/tfcollins/add-cli/instruments/: bench.rs.sma100a.html
prs/tfcollins/dwta/: cli.html  config_file.html  genindex.html  install.html  objects.inv  searchindex.js
prs/tfcollins/dwta/_sources/instruments/: bench.common.rst.txt
prs/tfcollins/dwta/instruments/: bench.keysight.e36233a.html
prs/tfcollins/out-enable-fix/: example_usage.html  index.html  py-modindex.html  search.html  searchindex.js
prs/tfcollins/out-enable-fix/_sources/: cli.md.txt
prs/tfcollins/out-enable-fix/instruments/: bench.hittite.hmct2220.html  bench.keysight.e36233a.html  bench.keysight.n9040b.html  bench.rs.sma100a.html
tests/: test_dwta.py  test_hmct2220.py  test_keysight.py
tests/ref_data/: test_iq.csv
